commit to push to github - having issues with navbar in real life on iphone-6 position:fixed now with top:0

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,12 @@
 /* ----------------------------------------------onscreen page title */
 .navbar {
     background-color: #9d2f3c;
-
     color: #fcdf64;
     position:fixed;
     width:100%;
     padding: 8px 0px 8px;
     z-index:1;
+    top:0;
 }
 
 .navbar-toggler {
@@ -56,10 +56,14 @@ footer {
     font-family: "Chicle", sans-serif;
     color: #fcdf64;
     text-align: center;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
 
+.bottom {
+    width:100%;
+    background-color: #9d2f3c;
+}
 /* ----------------------------------------------jumbotron */
 
 .jumbotron-text {
@@ -134,9 +138,6 @@ theband {
     background-color: #93c572;
 }
 
-.micky-card {
-    padding-bottom:15px;
-}
 .micky-modal-header {
     border-bottom: 3px solid #4b6c3e;
 }
@@ -165,15 +166,21 @@ theband {
     background-color: #4b6c3e;
 }
 
-.modal-header {
-    border-bottom: 3px solid #4b6c3e;
+.peter-modal-header {
+    border-bottom: 3px solid #93c572;
 }
 
-.modal-footer {
-    border-bottom: 3px solid #4b6c3e;
+.peter-modal-title {
+    font-family: "Chicle", sans-serif;
+    text-align: center;
+    color: #fcdf64;
+
+}
+.peter-modal-footer {
+    border-top: 3px solid #93c572;
 }
 
-.ptbutton {
+.peter-button {
     background-color: #93c572;
     border: 0px;
 }
@@ -184,7 +191,21 @@ theband {
     background-color: #ee82ee;
 }
 
-.mnbutton {
+.michael-modal-header {
+    border-bottom: 3px solid #800080;
+}
+
+.michael-modal-title {
+    font-family: "Chicle", sans-serif;
+    text-align: center;
+    color: #fcdf64;
+
+}
+.michael-modal-footer {
+    border-top: 3px solid #800080;
+}
+
+.michael-button {
     background-color: #800080;
     border: 0px;
 }
@@ -195,8 +216,22 @@ theband {
     background-color: #800080;
 }
 
-.djbutton {
-    background-color: #ee82ee;
+.davy-modal-header {
+    border-bottom: 3px solid #ee82ee;
+}
+
+.davy-modal-title {
+    font-family: "Chicle", sans-serif;
+    text-align: center;
+    color: #fcdf64;
+
+}
+.davy-modal-footer {
+    border-top: 3px solid #ee82ee;
+}
+
+.davy-button {
+    background-color: #ee82ee ;
     border: 0px;
 }
 
